    that are independent from user presets.
    For Windows, "config.json" is stored under "username\AppData\Roaming\TinyPedal" folder.
    For Linux, "config.json" is stored under "home/username/.config/TinyPedal" folder.
  - Log files are now stored in the same folder as global user config file.
  - All "application" settings are moved into "config.json".

* [New]Application dialog
  - Add "Application" to main window "Config" menu, which opens a dialog for customizing
    global application settings and saved in global user config file.
  - "minimum_update_interval" and "maximum_saving_attempts" options from "compatibility"
    are moved to "application".
  - Add "show_confirmation_for_batch_toggle" option, which shows confirmation dialog
    for enabling or disabling all widgets or modules. This option is enabled by default.

* [New]User path dialog
  - Add "User path" to main window "Config" menu, which opens a dialog for customizing
    global user path settings and saved in global user config file.
    To change user path, double-clicking on edit box to open "Select folder" dialog;
    or manually editing path text.
    Click "Apply" or "Save" to verify and apply new paths. Invalid path will not be applied.
  - Changes to default user paths on linux:
    * Default "user preset" path is changed to "home/username/.config/TinyPedal/settings/",
      previously this is set in "home/username/.config/TinyPedal/".
    * Default "brandlogo" path is changed to "home/username/.config/TinyPedal/brandlogo/",
      previously this is set in "home/username/.local/share/TinyPedal/brandlogo/".
  - See User Guide "User path" section for details.

* [New]Auto load preset system
  - Add "Auto load preset" system (implemented by @naturale0) to allow auto loading user-defined
    game-specific preset depends on active game (currently supports RF2 and LMU).
    Auto loading preset is triggered when a new or different game is started & active.