@@ -23,6 +23,7 @@ Config window
 import os
 import re
 import time
+from collections import deque
 
 from PySide2.QtCore import Qt, QRegularExpression, QLocale
 from PySide2.QtGui import (
@@ -68,6 +69,10 @@ float_valid = QDoubleValidator(-999999.9999, 999999.9999, 6)
 float_valid.setLocale(number_locale)
 color_valid = QRegularExpressionValidator(QRegularExpression('^#[0-9a-fA-F]*'))
 heatmap_name_valid = QRegularExpressionValidator(QRegularExpression('[0-9a-zA-Z_]*'))
+color_pick_history = deque(
+    ["#FFF"] * QColorDialog.customCount(),
+    maxlen=QColorDialog.customCount()
+)
 
 
 class FontConfig(QDialog):
@@ -464,7 +469,8 @@ class UserConfig(QDialog):
 
     def __add_option_color(self, idx, key, layout):
         """Color string"""
-        setattr(self, f"lineedit_{key}", ColorEdit(self.user_setting[self.key_name][key]))
+        setattr(self, f"lineedit_{key}", DoubleClickEdit(
+            mode="color", init=self.user_setting[self.key_name][key]))
         getattr(self, f"lineedit_{key}").setFixedWidth(self.option_width)
         getattr(self, f"lineedit_{key}").setMaxLength(9)
         getattr(self, f"lineedit_{key}").setValidator(color_valid)
@@ -486,7 +492,8 @@ class UserConfig(QDialog):
 
     def __add_option_path(self, idx, key, layout):
         """Path string"""
-        setattr(self, f"lineedit_{key}", PathEdit(self.user_setting[self.key_name][key]))
+        setattr(self, f"lineedit_{key}", DoubleClickEdit(
+            mode="path", init=self.user_setting[self.key_name][key]))
         getattr(self, f"lineedit_{key}").setFixedWidth(self.option_width)
         # Load selected option
         getattr(self, f"lineedit_{key}").setText(
@@ -592,50 +599,58 @@ class UserConfig(QDialog):
         self.option_float.append(key)
 
 
-class ColorEdit(QLineEdit):
-    """Line edit with color dialog"""
+class DoubleClickEdit(QLineEdit):
+    """Line edit with double click dialog trigger"""
 
-    def __init__(self, color_str):
+    def __init__(self, mode: str, init: str):
+        """Set dialog mode and initial value
+
+        Args:
+            mode: "color", "path".
+            init: initial value.
+        """
         super().__init__()
-        self.color_str = color_str
+        self.open_dialog = getattr(self, f"open_dialog_{mode}")
+        self.init_value = init
 
     def mouseDoubleClickEvent(self, event):
-        """Double click to open color dialog"""
+        """Double click to open dialog"""
         if event.buttons() == Qt.LeftButton:
-            color_dialog = QColorDialog()
-            # Add loaded color to custom color slot 0
-            color_dialog.setCustomColor(0, QColor(self.color_str))
-            # Open color selector dialog
-            color_get = color_dialog.getColor(
-                initial=QColor(self.color_str),
-                options=QColorDialog.ShowAlphaChannel
-            )
-            # Update color to edit box
-            if color_get.isValid():
-                # Add new color to custom color slot 1
-                color_dialog.setCustomColor(1, color_get)
-                if color_get.alpha() == 255:  # without alpha value
-                    color = color_get.name(QColor.HexRgb).upper()
-                else:  # with alpha value
-                    color = color_get.name(QColor.HexArgb).upper()
-                self.setText(color)
+            self.open_dialog()
 
+    def open_dialog_color(self):
+        """Open color dialog"""
+        color_dialog = QColorDialog()
+        # Load color history to custom color slot
+        for index, old_color in enumerate(color_pick_history):
+            color_dialog.setCustomColor(index, QColor(old_color))
+        # Open color selector dialog
+        color_get = color_dialog.getColor(
+            initial=QColor(self.init_value),
+            options=QColorDialog.ShowAlphaChannel
+        )
+        if color_get.isValid():
+            # Add new color to color history
+            if color_pick_history[0] != color_get:
+                color_pick_history.appendleft(color_get)
+            # Set output format
+            if color_get.alpha() == 255:  # without alpha value
+                color = color_get.name(QColor.HexRgb).upper()
+            else:  # with alpha value
+                color = color_get.name(QColor.HexArgb).upper()
+            # Update edit box and init value
+            self.setText(color)
+            self.init_value = color
 
-class PathEdit(QLineEdit):
-    """Line edit with directory dialog"""
-
-    def __init__(self, path_str):
-        super().__init__()
-        self.path_str = path_str
-
-    def mouseDoubleClickEvent(self, event):
-        """Double click to open directory dialog"""
-        if event.buttons() == Qt.LeftButton:
-            path_selected = QFileDialog.getExistingDirectory(self, dir=self.path_str)
-            if os.path.exists(path_selected):
-                # Convert to relative path if in APP root folder
-                path_valid = val.relative_path(path_selected)
-                self.setText(f"{path_valid}/")
+    def open_dialog_path(self):
+        """Open file path dialog"""
+        path_selected = QFileDialog.getExistingDirectory(self, dir=self.init_value)
+        if os.path.exists(path_selected):
+            # Convert to relative path if in APP root folder
+            path_valid = f"{val.relative_path(path_selected)}/"
+            # Update edit box and init value
+            self.setText(path_valid)
+            self.init_value = path_valid
 
 
 def add_context_menu(target, default, mode):
