@@ -44,7 +44,7 @@ from ..const import APP_ICON
 from ..module_control import wctrl
 from .. import formatter as fmt
 from .config import (
-    ColorEdit,
+    DoubleClickEdit,
     update_preview_color,
     color_valid,
 )
@@ -144,7 +144,7 @@ class VehicleClassEditor(QDialog):
 
     def __add_option_color(self, key, layout, width):
         """Color string"""
-        color_edit = ColorEdit(key)
+        color_edit = DoubleClickEdit(mode="color", init=key)
         color_edit.setFixedWidth(width)
         color_edit.setMaxLength(9)
         color_edit.setValidator(color_valid)
